package TestMetodic1;

public interface Gibrid {
    String bloodType = null;

    void taste(String bloodType);

    void reborn();
}
