package TestMetodic1;

public interface Kiborg {
    void kill(Integer account);
}
