package TestMetodic1;

public class MacUser extends User implements Swimmable{
    public MacUser(String gender, int age) {
        super(gender, age);
    }

    public void info() {

    }

    @Override
    public void swim() {

    }
}
